--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,55 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  border: black solid 1px
+}
+
+.layout {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+}
+.navbar > *{
+  margin: 0rem .2rem;
+  padding:1rem;
+  text-decoration: none;
+  color: black;
+  background-color: rgb(0,100,100) ;
+}
+
+.projects-page {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  padding: 1rem;
+  max-width: 1000px;
+}
+
+.projects-list{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.project-tile {
+  border: #fff solid 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-tile > * {
+  text-decoration: none;
+  color: black;
+}
+
+.project-tile > p {
+  max-width: 400px;
+  text-wrap:wrap;
+}
