--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body {
   background-color:var(--background-color-main);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
 
 code {
@@ -49,18 +54,28 @@ a:-webkit-any-link {
   display:flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .navbar {
   display: flex;
   justify-content: center;
+  border-bottom: solid 2px #333;
+  width: 500px;
 }
-.navbar > *{
+.navlink{
   margin: 0rem .2rem;
-  padding:1rem;
-  text-decoration: none;
+  padding:2rem;
+  font-size: larger;
   color: black;
-  background-color: rgb(132, 145, 168) ;
+
+}
+
+.active {
+  text-decoration: underline !important;
+}
+.inactive {
+  text-decoration: none;
 }
 
 .page {
@@ -68,6 +83,7 @@ a:-webkit-any-link {
   flex-direction: column;
   align-items: center;
   margin-top: 2rem;
+  width: 90%;
   max-width: 800px;
 }
 
