--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
   font-family: 'Montserrat';
-  --background-color-main: rgb(241, 213, 166);
+  --background-color-main: hsl(38, 73%, 80%);
   background-color:var(--background-color-main);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -87,6 +87,15 @@ a:-webkit-any-link {
   max-width: 800px;
 }
 
+.about-page hr {
+  width:100%;
+  height:2px;
+  background-color:black;
+  opacity:50%;
+  border: none;
+  margin: 1rem 0rem;
+}
+
 .about-page-image-container {
   width: 400px;
   height: 400px;
@@ -101,6 +110,58 @@ a:-webkit-any-link {
   height: auto;
   max-width: 100%;
   max-height: 100%;
+}
+
+.timeline {
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  align-items:center;
+
+}
+
+.timeline-tip {
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  font-style:italic;
+  font-size:small;
+}
+
+.end-tick {
+  background-color:black;
+  height: 30px;
+  width: 2px;
+}
+
+.chunk {
+  height: 10px;
+  width: 50px;
+  position: relative;
+}
+
+.popup {
+  visibility: hidden;
+  width: 400px;
+  background-color: rgb(242, 238, 238);
+  z-index: 1;
+  position: relative;
+  top: 30px;
+  left:-190px;
+  border-radius: 3px;
+  border:3px solid darken(var(--background-color),80%);
+  box-shadow: 3px 3px 1px 1px rgb(50,50,50);
+  padding:1rem;
+}
+
+.chunk:hover {
+  height: 20px;
+  background-color:purple;
+}
+
+.chunk:hover .popup {
+  visibility: visible;
 }
 
 .about-page-info {
