--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,7 @@ body {
   scrollbar-width: none;
 }
 
-body::-webkit-scrollbar { 
-  display: none;  /* Safari and Chrome */
-}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -142,19 +140,42 @@ a:-webkit-any-link {
   position: relative;
 }
 
-.popup {
-  visibility: hidden;
-  width: 400px;
-  background-color: rgb(242, 238, 238);
-  z-index: 1;
-  position: relative;
-  top: 30px;
-  left:-190px;
-  border-radius: 3px;
-  border:1px solid var(--border-color);
-  box-shadow: -3px -3px 2px 1px hsla(30, 28%, 50%, 50%);
-  padding:1rem;
+@media (min-width: 480px) {
+  .popup {
+    visibility: hidden;
+    width: 400px;
+    background-color: rgb(242, 238, 238);
+    z-index: 1;
+    position: relative;
+    top: 30px;
+    left:-190px;
+    border-radius: 3px;
+    border:1px solid var(--border-color);
+    box-shadow: -3px -3px 2px 1px hsla(30, 28%, 50%, 50%);
+    padding:1rem;
+  }
+    
 }
+@media (max-width: 480px) {
+  .popup {
+    visibility: hidden;
+    width: 400px;
+    background-color: rgb(242, 238, 238);
+    z-index: 1;
+    /* position: relative; */
+    /* top: 30px;
+    left:-190px; */
+    position: absolute;
+    left: 20px;
+    border-radius: 3px;
+    border:1px solid var(--border-color);
+    box-shadow: -3px -3px 2px 1px hsla(30, 28%, 50%, 50%);
+    padding:1rem;
+  }
+    
+}
+
+
 
 .chunk:hover {
   height: 20px;
@@ -166,7 +187,8 @@ a:-webkit-any-link {
 }
 
 .about-page-info {
-  width: 700px;
+  max-width: 700px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -188,9 +210,18 @@ a:-webkit-any-link {
   max-width: 1000px;
 }
 
-.projects-list{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+@media (min-width:700px){
+  .projects-list{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 700px) {
+  .projects-list {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .project-tile {
@@ -268,6 +299,23 @@ a:-webkit-any-link {
   background-color: #aac;
   border: 1px solid #337;
   border-radius: 3px;
+}
+
+.linkedin {
+  background-color: rgb(90 176 247);
+}
+
+.instagram {
+  background-color: rgb(239, 115, 177);
+}
+
+.github {
+  background-color: black;
+  color: white!important;
+}
+
+.imdb {
+  background-color: #f5c519;
 }
 
 .nope {
